стилизация  главной старницы (header, promo, programs)

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,2 +1,6 @@
 @import "./fonts.less";
+@import "blocks/colors.less";
 @import "blocks/page.less";
+@import "blocks/page-header.less";
+@import "blocks/promo.less";
+@import "blocks/programs.less";
