--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -2,16 +2,17 @@
   height: 100%;
 }
 
-.page-body {
+.page__body {
   display: grid;
   grid-template-rows: min-content 1fr min-content;
   align-content: start;
-  min-width: 320px;
-  margin: 0;
+  max-width: 320px;
+  margin: 0 auto;
   min-height: 100%;
-  font-style: "Oswald";
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 16px;
+  line-height: 18px;
 }
 
 .visually-hidden {
