--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -7,11 +7,11 @@
   font-style: normal;
 }
 
-// @font-face {
-//   font-family: "Oswald";
-//   src: local("Oswald"),
-//     url("../fonts/oswaldregular.woff2") format("woff2"),
-//     url("../fonts/oswaldregular.woff") format("woff");
-//   font-weight: 500;
-//   font-style: normal;
-// }
+@font-face {
+  font-family: "Oswald";
+  src: local("Oswald"),
+    url("../fonts/oswaldregular.woff2") format("woff2"),
+    url("../fonts/oswaldregular.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
