стилизация главной старницы (programs, information)

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,3 +4,4 @@
 @import "blocks/page-header.less";
 @import "blocks/promo.less";
 @import "blocks/programs.less";
+@import "blocks/information.less"
