--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -27,6 +27,21 @@
     background-color: @basic_green;
   }
 
+  &__title {
+    font-size: 24px;
+    line-height: 37px;
+    margin: 0;
+  }
+
+  &__text {
+    font-family: "Arial", "Helvetica", sans-serif;
+    font-size: 14px;
+    line-height: 18px;
+    color: @special_dark-grey;
+    width: 227px;
+    margin: 0;
+  }
+
   &__link {
     font-size: 16px;
     line-height: 16px;
