стилизация главной старницы (information)

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -40,7 +40,7 @@
     line-height: 20px;
     text-transform: uppercase;
     text-decoration: none;
-    color: @basic_black;
+    color: --basic_black;
     margin: 0 auto;
   }
 }
