--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -14,7 +14,7 @@
   &__item {
     padding-left: 20px;
     min-height: 266px;
-    background-color: @basic_grey;
+    background-color: --basic_grey;
   }
 
   &__icon-background {
@@ -24,7 +24,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: @basic_green;
+    background-color: --basic_green;
   }
 
   &__title {
@@ -47,6 +47,6 @@
     line-height: 16px;
     text-transform: uppercase;
     text-decoration: none;
-    color: @basic_black;
+    color: --basic_black;
   }
 }
