--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,7 +1,7 @@
-@import "./fonts.less";
-@import "blocks/colors.less";
-@import "blocks/page.less";
-@import "blocks/page-header.less";
-@import "blocks/promo.less";
-@import "blocks/programs.less";
-@import "blocks/information.less"
+// @import "./fonts.less";
+// @import "blocks/colors.less";
+// @import "blocks/page.less";
+// @import "blocks/page-header.less";
+// @import "blocks/promo.less";
+// @import "blocks/programs.less";
+// @import "blocks/information.less"
