--- a/source/less/blocks/colors.less
+++ b/source/less/blocks/colors.less
@@ -1,8 +1,8 @@
-@basic_white: #FFFFFF;
-@basic_black: #000000;
-@basic_green: #68B738;
-@basic_grey: #F2F2F2;
-@basic_green-2: #5EAA2F;
+--basic_white: #FFFFFF;
+--basic_black: #000000;
+--basic_green: #68B738;
+--basic_grey: #F2F2F2;
+--basic_green-2: #5EAA2F;
 @special_grey: #CDCDCD;
 @special_grey-2: #EBEBEB;
 @special_grey-4: #E6E6E6;
