--- a/source/less/blocks/information.less
+++ b/source/less/blocks/information.less
@@ -4,7 +4,7 @@
   &__background-icon {
     width: 60px;
     height: 60px;
-    background-color: @basic_green;
+    background-color: --basic_green;
     display: flex;
     justify-content: center;
   }
