--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -12,7 +12,7 @@
     font-size: 36px;
     line-height: 36px;
     text-align: center;
-    color: @basic_white;
+    color: --basic_white;
     margin: 0;
     margin-bottom: 25px;
   }
@@ -22,7 +22,7 @@
     line-height: 14px;
     text-transform: uppercase;
     text-align: center;
-    color: @basic_white;
+    color: --basic_white;
   }
 
   &__img {
@@ -42,8 +42,8 @@
   text-align: center;
   text-decoration: none;
   width: 280px;
-  color: @basic_white;
-  background-color: @basic_green;
+  color: --basic_white;
+  background-color: --basic_green;
   text-transform: uppercase;
   margin: 0 auto;
   line-height: 20px;
