стили главной страницы

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,7 +1,12 @@
-// @import "./fonts.less";
-// @import "blocks/colors.less";
-// @import "blocks/page.less";
-// @import "blocks/page-header.less";
-// @import "blocks/promo.less";
-// @import "blocks/programs.less";
-// @import "blocks/information.less"
+
+@import "blocks/fonts.less";
+@import "blocks/colors.less";
+@import "blocks/page.less";
+@import "blocks/page-header.less";
+@import "blocks/main-nav.less";
+@import "blocks/promo.less";
+@import "blocks/programs.less";
+@import "blocks/information.less";
+@import "blocks/example.less";
+@import "blocks/page-footer.less";
+@import "blocks/social.less";
