--- a/source/less/blocks/information.less
+++ b/source/less/blocks/information.less
@@ -1,11 +1,41 @@
 .information {
   padding: 0 20px 0 20px;
 
+  &__title {
+    font-size: 36px;
+    line-height: 40px;
+    margin: 27px 0 38px 0;
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  &__item {
+    display: flex;
+    gap: 20px;
+  }
+
   &__background-icon {
     width: 60px;
     height: 60px;
-    background-color: --basic_green;
+    background-color: @basic_green;
     display: flex;
     justify-content: center;
+    align-items: center;
+  }
+
+  &__text {
+    font-family: "Arial", "Helvetica", sans-serif;
+    font-size: 14px;
+    line-height: 18px;
+    color: @special_dark-grey;
+    margin: 0;
+    max-width: 200px;
   }
 }
