--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -1,18 +1,18 @@
 .page {
   height: 100%;
-}
 
-.page__body {
-  display: grid;
-  grid-template-rows: min-content 1fr min-content;
-  align-content: start;
-  max-width: 320px;
-  margin: 0 auto;
-  min-height: 100%;
-  font-family: "Oswald", "Arial", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 18px;
+  &__body {
+    display: grid;
+    grid-template-rows: min-content 1fr min-content;
+    align-content: start;
+    max-width: 320px;
+    margin: 0 auto;
+    min-height: 100%;
+    font-family: "Oswald", "Arial", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;
+  }
 }
 
 .visually-hidden {
