разметка главной страницы (footer,copyright,social)

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,9 +1,11 @@
-.contacts__wrapper {
-  display: flex;
-  gap: 5px;
-  justify-content: space-between;
-  padding: 0 20px 0 20px;
-  margin: 28px 0 26px 0;
+.contacts {
+  &__wrapper {
+    display: flex;
+    gap: 5px;
+    justify-content: space-between;
+    padding: 0 20px 0 20px;
+    margin: 28px 0 26px 0;
+  }
 
   &__text {
     font-size: 16px;
