--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -5,7 +5,8 @@
   border-top: 1px solid @special_grey-6;
 
   &__list {
-    margin: 39px 0 32px 0;
+    width: min-content;
+    margin: 39px auto 32px auto;
     padding: 0;
     list-style: none;
     display: flex;
