--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -4,6 +4,7 @@
   flex-direction: column;
   margin: 0;
   padding: 0 20px 0 20px;
+  background-color: @basic_grey;
 
   &__logo {
     margin: 39px 0 32px 0;
