--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -2,10 +2,7 @@
   height: 100%;
 
   &__body {
-    display: grid;
-    grid-template-rows: min-content 1fr min-content;
-    align-content: start;
-    max-width: 320px;
+    width: 320px;
     margin: 0 auto;
     min-height: 100%;
     font-family: "Oswald", "Arial", sans-serif;
