--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,5 @@
-
-@import "blocks/fonts.less";
 @import "blocks/colors.less";
+@import "blocks/fonts.less";
 @import "blocks/page.less";
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
@@ -8,5 +7,7 @@
 @import "blocks/programs.less";
 @import "blocks/information.less";
 @import "blocks/example.less";
+@import "blocks/contacts.less";
 @import "blocks/page-footer.less";
 @import "blocks/social.less";
+@import "blocks/copyright.less";
