стили страницы каталога (product-card)

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -10,7 +10,7 @@
   &__item {
     width: 100%;
     padding: 22px 0 24px 0;
-    border-bottom: 1px solid @special_grey-4;
+    border-top: 1px solid @special_grey-4;
   }
 
   &__item a {
