--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -12,7 +12,7 @@
   }
 
   &__row-wrapper {
-    padding: 0 20px;
+    padding: 0 20px 17px 20px;
     display: flex;
     justify-content: space-between;
   }
