--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,6 +3,7 @@
 @import "blocks/page.less";
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
+@import "blocks/page-main.less";
 @import "blocks/promo.less";
 @import "blocks/programs.less";
 @import "blocks/information.less";
@@ -11,3 +12,4 @@
 @import "blocks/page-footer.less";
 @import "blocks/social.less";
 @import "blocks/copyright.less";
+@import "blocks/catalog.less";
