--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -99,22 +99,25 @@
   margin: 0;
   margin-top: 25px;
   text-align: center;
-  border: 1px solid @special_grey;
-  box-sizing: border-box;
-  border-radius: 3px;
 }
 
 .specification__item-value {
+  border: 1px solid @special_grey;
+  box-sizing: border-box;
+  border-radius: 3px;
   font-size: 24px;
   line-height: 24px;
   margin: 0;
+  padding: 15px 0 18px 0;
 }
 
 .specification__item-name {
+  width: 87px;
+  z-index: 2;
   font-family: "Arial", "Helvetica", sans-serif;
   font-size: 12px;
   line-height: 12px;
   color: @special_dark-grey;
-  margin: 0;
-  margin-top: 10px;
+  margin: -10px auto 0 auto;
+  background-color: @special_grey-5;
 }
