--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,10 +1,15 @@
 .page-main {
   &__title {
-    margin: 0;
-    padding: 27px 0 41px 0;
     border-top: 1px solid @special_grey-4;
     border-bottom: 1px solid @special_grey-4;
     font-size: 36px;
     line-height: 36px;
+    margin: 0;
+    padding: 27px 0 41px 0;
+    text-align: center;
+  }
+
+  &__form {
+    margin: 0;
   }
 }
