--- a/source/less/style.less
+++ b/source/less/style.less
@@ -13,3 +13,7 @@
 @import "blocks/social.less";
 @import "blocks/copyright.less";
 @import "blocks/catalog.less";
+@import "blocks/catalog-further.less";
+@import "blocks/card.less";
+@import "blocks/present.less";
+@import "blocks/form.less";
