--- a/source/less/blocks/colors.less
+++ b/source/less/blocks/colors.less
@@ -9,6 +9,7 @@
 @special_grey-3: #666666;
 @special_grey-5: #EAEAEA;
 @special_grey-6: #D9D9D9;
+@special_grey-7: #E7E7E7;
 @special_dark-grey: #444444;
 @special_dark-grey-2: #222222;
 @status_error: #FF8282;
