стилизация всех страниц (на проверку)

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -3,7 +3,7 @@
     display: flex;
     gap: 5px;
     justify-content: space-between;
-    padding: 0 20px 0 20px;
+    padding: @mobile-padding;
     margin: 28px 0 26px 0;
   }
 
@@ -16,8 +16,6 @@
 
   &__adress {
     font-family: "Arial", "Helvetica", sans-serif;
-    font-style: normal;
-    font-weight: normal;
     font-size: 14px;
     line-height: 20px;
     color: @special_dark-grey;
