--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -2,9 +2,11 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin: 0;
-  padding: 0 20px 0 20px;
   background-color: @basic_grey;
+  margin: 0;
+  padding: @mobile-padding;
+  outline: 2px solid @status_error;
+  outline-offset: -2px;
 
   &__logo {
     margin: 39px 0 32px 0;
