--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -18,25 +18,27 @@
 
   &__title {
     width: 80px;
-    margin: 0;
+    font-weight: 400;
     font-size: 16px;
     line-height: 20px;
     text-transform: uppercase;
+    margin: 0;
 
     &--last {
       width: 100%;
       text-align: center;
+      margin-top: 23px;
     }
   }
 
   &__table {
     width: 100%;
-    margin: 0;
-    margin-top: 18px;
     font-family: "Arial", "Helvetica", sans-serif;
     font-size: 12px;
     line-height: 16px;
     color: @special_dark-grey;
+    margin: 0;
+    margin-top: 18px;
   }
 
   &__button {
@@ -54,7 +56,7 @@
 
   &__icon {
     display: block;
-    margin: 0 auto 23px auto;
+    margin: 0 auto;
   }
 
   &__text {
@@ -62,14 +64,14 @@
     font-size: 12px;
     line-height: 16px;
     color: @special_dark-grey;
+    text-align: center;
     margin: 0;
     margin-top: 8px;
-    margin-bottom: 21px;
-    text-align: center;
   }
 
   &__button--last {
     background-color: @basic_grey;
     color: @special_dark-grey;
+    margin-top: 21px;
   }
 }
