--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -3,18 +3,17 @@
 
   &__background-wrapper {
     height: 302px;
-    width: 320px;
     background-color: @special_green-1;
     padding-top: 27px;
   }
 
   &__title {
+    font-weight: 400;
     font-size: 36px;
     line-height: 36px;
     text-align: center;
     color: @basic_white;
     margin: 0;
-    margin-bottom: 25px;
   }
 
   &__slogan {
@@ -23,6 +22,7 @@
     text-transform: uppercase;
     text-align: center;
     color: @basic_white;
+    margin-top: 25px;
   }
 
   &__img {
@@ -35,19 +35,4 @@
     font-size: 14px;
     padding: 11px 0 11px 0;
   }
-}
-
-.button {
-  display: block;
-  text-align: center;
-  text-decoration: none;
-  width: 280px;
-  color: @basic_white;
-  background-color: @basic_green;
-  text-transform: uppercase;
-  margin: 0 auto;
-  line-height: 20px;
-  font-size: 16px;
-  padding: 10px 0 10px 0;
-  border: none;
 }
