--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,15 +1,15 @@
 .social {
   width: 100%;
-  margin: 0;
-  border-bottom: 1px solid @special_grey-6;
-  border-top: 1px solid @special_grey-6;
 
   &__list {
-    width: min-content;
-    margin: 39px auto 32px auto;
-    padding: 0;
-    list-style: none;
     display: flex;
+    justify-content: center;
     gap: 34px;
+    list-style: none;
+    box-sizing: border-box;
+    border-bottom: 1px solid @special_grey-6;
+    border-top: 1px solid @special_grey-6;
+    padding: 23px 0 24px 0;
+    margin: 0;
   }
 }
