--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,10 +1,13 @@
-@import "blocks/colors.less";
-@import "blocks/fonts.less";
+@import "./colors.less";
+@import "./fonts.less";
+@import "./helpers.less";
+@import "./variables.less";
 @import "blocks/page.less";
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
 @import "blocks/page-main.less";
 @import "blocks/promo.less";
+@import "blocks/button.less";
 @import "blocks/programs.less";
 @import "blocks/information.less";
 @import "blocks/example.less";
@@ -12,7 +15,7 @@
 @import "blocks/page-footer.less";
 @import "blocks/social.less";
 @import "blocks/copyright.less";
-@import "blocks/catalog.less";
+@import "blocks/product-card.less";
 @import "blocks/catalog-further.less";
 @import "blocks/card.less";
 @import "blocks/present.less";
