--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -2,22 +2,23 @@
   display: grid;
   gap: 14px;
   min-height: 117px;
+  border-bottom: 1px solid @special_grey-5;
   margin: 0;
   padding-top: 13px;
   padding-bottom: 19px;
-  border-bottom: 1px solid @special_grey-5;
 
   &__title {
-    margin: 0;
+    font-weight: 400;
     font-size: 16px;
     line-height: 16px;
     text-transform: uppercase;
+    margin: 0;
   }
 
   &__text {
-    margin: 0;
     display: flex;
     justify-content: space-between;
+    margin: 0;
 
     &-name {
       font-family: "Arial", "Helvetica", sans-serif;
