--- a/source/less/blocks/catalog-further.less
+++ b/source/less/blocks/catalog-further.less
@@ -1,12 +1,13 @@
 .catalog-further {
-  padding: 0 20px 0 20px;
+  padding: @mobile-padding;
 
   &__title {
-    border-bottom: 1px solid @special_grey-4;
+    font-weight: 400;
     font-size: 24px;
     line-height: 24px;
+    text-align: center;
+    border-bottom: 1px solid @special_grey-4;
     margin: 0;
     padding: 25px 0 36px 0;
-    text-align: center;
   }
 }
