--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -8,31 +8,30 @@
   }
 
   &__title {
+    font-weight: 400;
     font-size: 36px;
     line-height: 40px;
     margin: 0;
-    font-weight: normal;
   }
 
   &__text {
     font-family: "Arial", "Helvetica", sans-serif;
-    font-weight: 400;
-    margin: 0;
-    margin-top: 33px;
     font-size: 14px;
     line-height: 18px;
     color: @special_dark-grey;
+    margin: 0;
+    margin-top: 33px;
   }
 
   &__result {
     text-align: center;
     margin: 0;
     margin-top: 27px;
-    margin-bottom: 42px;
   }
 
   &__slider {
     margin: 0;
+    margin-top: 42px;
   }
 
   &__slide--after {
@@ -40,12 +39,13 @@
   }
 
   &__slider-buttons {
-    padding: 0 45px 25px 45px;
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+    gap: 2px;
+    padding-bottom: 25px;
     margin: 0;
     margin-top: 23px;
-    align-items: baseline;
-    display: flex;
-    gap: 2px;
   }
 
   &__slider-toggle {
@@ -77,47 +77,48 @@
   }
 
   &__slider-button {
-    border: none;
-    font-size: 16px;
-    line-height: 20px;
     width: 70px;
     height: 40px;
+    font-size: 16px;
+    line-height: 20px;
     background-color: transparent;
+    border: none;
+  }
+
+  &__specification-list {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-top: 25px;
+  }
+
+  &__specification-item {
+    width: 124px;
+    text-align: center;
+    margin: 0;
+  }
+
+  &__specification-value {
+    font-size: 24px;
+    line-height: 24px;
+    box-sizing: border-box;
+    border-radius: 3px;
+    border: 1px solid @special_grey;
+    margin: 0;
+    padding: 15px 0 18px 0;
+  }
+
+  &__specification-name {
+    width: 87px;
+    z-index: 2;
+    font-family: "Arial", "Helvetica", sans-serif;
+    font-size: 12px;
+    line-height: 12px;
+    color: @special_dark-grey;
+    margin: -10px auto 0 auto;
+    background-color: @special_grey-5;
   }
 }
 
-.specification__list {
-  display: flex;
-  justify-content: space-between;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.specification__item {
-  width: 124px;
-  margin: 0;
-  margin-top: 25px;
-  text-align: center;
-}
-
-.specification__item-value {
-  border: 1px solid @special_grey;
-  box-sizing: border-box;
-  border-radius: 3px;
-  font-size: 24px;
-  line-height: 24px;
-  margin: 0;
-  padding: 15px 0 18px 0;
-}
-
-.specification__item-name {
-  width: 87px;
-  z-index: 2;
-  font-family: "Arial", "Helvetica", sans-serif;
-  font-size: 12px;
-  line-height: 12px;
-  color: @special_dark-grey;
-  margin: -10px auto 0 auto;
-  background-color: @special_grey-5;
-}
