--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -8,14 +8,14 @@
     margin: 0;
 
     &--hint {
-      padding: 0 20px 0 20px;
-      margin-top: 37px;
+      padding: @mobile-padding;
       margin-bottom: 39px;
     }
 
     &--footnote {
       font-family: "Arial", "Helvetica", sans-serif;
       line-height: 16px;
+      text-transform: none;
       text-align: center;
       margin-top: 21px;
     }
@@ -24,13 +24,14 @@
   &__list {
     margin: 0;
     margin-bottom: 26px;
-    padding: 0 20px 0 20px;
+    padding: @mobile-padding;
     list-style: none;
 
     &--radio {
-      padding: 22px 20px 20px 20px;
+      box-sizing: border-box;
       border-top: 1px solid @special_grey-6;
       border-bottom: 1px solid @special_grey-6;
+      padding: 22px 20px 20px 20px;
     }
 
     &--contacts {
@@ -44,12 +45,12 @@
   }
 
   &__item {
-    margin-bottom: 13px;
     display: flex;
     align-items: baseline;
+    margin-top: 13px;
 
-    &:last-child {
-      margin-bottom: 0;
+    &:first-child {
+      margin-top: 0;
     }
   }
 
@@ -59,38 +60,42 @@
     text-transform: uppercase;
     color: @special_dark-grey;
     margin-right: 10px;
+    white-space: nowrap;
 
     &--radio {
       margin-left: 15px;
+      margin-right: 0;
     }
 
     &--checkbox {
       margin-left: 15px;
+      margin-right: 0;
     }
   }
 
   &__input {
+    width: 100%;
     font-family: "Oswald", "Arial", sans-serif;
-    padding: 13px 15px;
     font-size: 16px;
     line-height: 18px;
     border: 1px solid @special_grey-7;
     color: @special_dark-grey;
     box-sizing: border-box;
-    width: 100%;
     text-transform: uppercase;
+    padding: 13px 12px 13px 15px;
   }
 
   &__subtitle {
-    margin: 0;
-    padding-left: 20px;
+    font-weight: 400;
     font-size: 24px;
     line-height: 26px;
+    margin: 0;
+    padding-left: 20px;
   }
 
   &__message {
     margin: 37px 0 23px 0;
-    padding: 0 20px 0 20px;
+    padding: @mobile-padding;
 
     &-textarea {
       height: 150px;
