--- a/source/less/blocks/information.less
+++ b/source/less/blocks/information.less
@@ -1,10 +1,12 @@
 .information {
-  padding: 0 20px 0 20px;
+  padding: @mobile-padding;
 
   &__title {
     font-size: 36px;
     line-height: 40px;
-    margin: 27px 0 38px 0;
+    font-weight: 400;
+    margin: 0;
+    margin-top: 27px;
   }
 
   &__list {
@@ -13,6 +15,7 @@
     gap: 20px;
     list-style: none;
     margin: 0;
+    margin-top: 38px;
     padding: 0;
   }
 
