--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -20,6 +20,7 @@
     text-align: center;
     font-size: 20px;
     line-height: 20px;
+    font-weight: 500;
     text-transform: uppercase;
     text-decoration: none;
     color: @basic_black;
