--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,12 +1,18 @@
 .page-main {
   &__title {
-    border-top: 1px solid @special_grey-4;
-    border-bottom: 1px solid @special_grey-4;
+    font-weight: 400;
     font-size: 36px;
     line-height: 36px;
+    text-align: center;
+    border-top: 1px solid @special_grey-4;
+    border-bottom: 1px solid @special_grey-4;
     margin: 0;
     padding: 27px 0 41px 0;
-    text-align: center;
+
+    &--form {
+      border-bottom: none;
+      padding-bottom: 37px;
+    }
   }
 
   &__form {
