--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -2,25 +2,17 @@
   height: 100%;
 
   &__body {
+    display: grid;
+    grid-template-rows: min-content 1fr min-content;
+    align-content: start;
     width: 320px;
-    margin: 0 auto;
     min-height: 100%;
     font-family: "Oswald", "Arial", sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 18px;
+    margin: 0 auto;
+    outline: 2px solid @status_error;
+    outline-offset: -2px;
   }
-}
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
 }
