--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -1,5 +1,6 @@
 .programs {
-  padding: 0 20px;
+  padding: @mobile-padding;
+  margin: 0;
   margin-top: 22px;
 
   &__title-wrapper {
@@ -18,7 +19,7 @@
   }
 
   &__item {
-    padding-left: 20px;
+    padding: @mobile-padding;
     min-height: 266px;
     background-color: @basic_grey;
   }
@@ -38,6 +39,7 @@
   }
 
   &__title {
+    font-weight: 400;
     font-size: 24px;
     line-height: 37px;
     text-transform: uppercase;
@@ -49,7 +51,6 @@
     font-size: 14px;
     line-height: 18px;
     color: @special_dark-grey;
-    width: 227px;
     margin: 0;
     margin-top: 22px;
     padding-bottom: 23px;
