разметка всех страниц (правки)

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -83,6 +83,11 @@
     box-sizing: border-box;
     text-transform: uppercase;
     padding: 13px 12px 13px 15px;
+
+    &--textarea {
+      height: 150px;
+      resize: none;
+    }
   }
 
   &__subtitle {
@@ -96,10 +101,5 @@
   &__message {
     margin: 37px 0 23px 0;
     padding: @mobile-padding;
-
-    &-textarea {
-      height: 150px;
-      resize: none;
-    }
   }
 }
