--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -14,7 +14,7 @@
     margin: 0;
   }
 
-  &__adress {
+  &__address {
     font-family: "Arial", "Helvetica", sans-serif;
     font-size: 14px;
     line-height: 20px;
