--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,1 +1,19 @@
 @mobile-padding: 0 20px;
+
+// colors
+@basic_white: #FFFFFF;
+@basic_black: #000000;
+@basic_green: #68B738;
+@basic_grey: #F2F2F2;
+@basic_green-2: #5EAA2F;
+@special_grey: #CDCDCD;
+@special_grey-2: #EBEBEB;
+@special_grey-4: #E6E6E6;
+@special_grey-3: #666666;
+@special_grey-5: #EAEAEA;
+@special_grey-6: #D9D9D9;
+@special_grey-7: #E7E7E7;
+@special_dark-grey: #444444;
+@special_dark-grey-2: #222222;
+@status_error: #FF8282;
+@special_green-1: rgba(104, 183, 56, 0.85);
