разметка всех страниц (на повторную проверку)

--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -6,32 +6,32 @@
   margin: 0;
   padding-top: 13px;
   padding-bottom: 19px;
+}
 
-  &__title {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 16px;
-    text-transform: uppercase;
-    margin: 0;
-  }
+.card__title {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 16px;
+  text-transform: uppercase;
+  margin: 0;
+}
 
-  &__text {
-    display: flex;
-    justify-content: space-between;
-    margin: 0;
+.card__text {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+}
 
-    &-name {
-      font-family: "Arial", "Helvetica", sans-serif;
-      font-size: 14px;
-      line-height: 14px;
-      margin: 0;
-    }
+.card__text-name {
+  font-family: "Arial", "Helvetica", sans-serif;
+  font-size: 14px;
+  line-height: 14px;
+  margin: 0;
+}
 
-    &-price {
-      font-family: "Arial", "Helvetica", sans-serif;
-      font-size: 14px;
-      line-height: 14px;
-      margin: 0;
-    }
-  }
+.card__text-price {
+  font-family: "Arial", "Helvetica", sans-serif;
+  font-size: 14px;
+  line-height: 14px;
+  margin: 0;
 }
