--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -3,19 +3,19 @@
   margin-top: 36px;
   padding: 58px 20px 43px 20px;
   background-color: @basic_green;
+}
 
-  &__img {
-    display: block;
-    margin: 0 auto;
-  }
+.present__img {
+  display: block;
+  margin: 0 auto;
+}
 
-  &__text {
-    font-family: "Arial", "Helvetica", sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-    color: @basic_white;
-    text-align: center;
-    width: 165px;
-    margin: 48px auto 0 auto;
-  }
+.present__text {
+  font-family: "Arial", "Helvetica", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  color: @basic_white;
+  text-align: center;
+  width: 165px;
+  margin: 48px auto 0 auto;
 }
