--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -2,70 +2,70 @@
   padding: @mobile-padding;
   margin: 0;
   margin-top: 22px;
+}
 
-  &__title-wrapper {
-    display: flex;
-    gap: 20px;
-    padding-top: 24px;
-  }
+.programs__title-wrapper {
+  display: flex;
+  gap: 20px;
+  padding-top: 24px;
+}
 
-  &__list {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
+.programs__list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
-  &__item {
-    padding: @mobile-padding;
-    min-height: 266px;
-    background-color: @basic_grey;
-  }
+.programs__item {
+  padding: @mobile-padding;
+  min-height: 266px;
+  background-color: @basic_grey;
+}
 
-  &__icon-background {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: @basic_green;
-  }
+.programs__icon-background {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: @basic_green;
+}
 
-  &__img {
-    position: absolute;
-  }
+.programs__img {
+  position: absolute;
+}
 
-  &__title {
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 37px;
-    text-transform: uppercase;
-    margin: 0;
-  }
+.programs__title {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 37px;
+  text-transform: uppercase;
+  margin: 0;
+}
 
-  &__text {
-    font-family: "Arial", "Helvetica", sans-serif;
-    font-size: 14px;
-    line-height: 18px;
-    color: @special_dark-grey;
-    margin: 0;
-    margin-top: 22px;
-    padding-bottom: 23px;
-    border-bottom: 1px solid @special_grey-6;
-  }
+.programs__text {
+  font-family: "Arial", "Helvetica", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  color: @special_dark-grey;
+  margin: 0;
+  margin-top: 22px;
+  padding-bottom: 23px;
+  border-bottom: 1px solid @special_grey-6;
+}
 
-  &__link {
-    display: block;
-    font-size: 16px;
-    line-height: 16px;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: @basic_black;
-    padding-top: 15px;
-    padding-bottom: 18px;
-    margin: 0;
-  }
+.programs__link {
+  display: block;
+  font-size: 16px;
+  line-height: 16px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: @basic_black;
+  padding-top: 15px;
+  padding-bottom: 18px;
+  margin: 0;
 }
