--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,12 +1,13 @@
-@import "./fonts.less";
-@import "./helpers.less";
-@import "./variables.less";
+@import "./common/normalize.css";
+@import "./common/fonts.less";
+@import "./common/variables.less";
+@import "./common/helpers.less";
 @import "blocks/page.less";
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
 @import "blocks/page-main.less";
-@import "blocks/promo.less";
 @import "blocks/button.less";
+@import "blocks/promo.less";
 @import "blocks/programs.less";
 @import "blocks/information.less";
 @import "blocks/example.less";
