--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,28 +1,26 @@
-.contacts {
-  &__wrapper {
-    display: flex;
-    gap: 5px;
-    justify-content: space-between;
-    padding: @mobile-padding;
-    margin: 28px 0 26px 0;
-  }
+.contacts__wrapper {
+  display: flex;
+  gap: 5px;
+  justify-content: space-between;
+  padding: @mobile-padding;
+  margin: 28px 0 26px 0;
+}
 
-  &__text {
-    font-size: 16px;
-    line-height: 20px;
-    text-transform: uppercase;
-    margin: 0;
-  }
+.contacts__text {
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  margin: 0;
+}
 
-  &__address {
-    font-family: "Arial", "Helvetica", sans-serif;
-    font-size: 14px;
-    line-height: 20px;
-    color: @special_dark-grey;
-    margin: 0;
-  }
+.contacts__address {
+  font-family: "Arial", "Helvetica", sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+  color: @special_dark-grey;
+  margin: 0;
+}
 
-  &__map {
-    border: 0;
-  }
+.contacts__map {
+  border: 0;
 }
