--- a/source/less/blocks/information.less
+++ b/source/less/blocks/information.less
@@ -1,44 +1,44 @@
 .information {
   padding: @mobile-padding;
+}
 
-  &__title {
-    font-size: 36px;
-    line-height: 40px;
-    font-weight: 400;
-    margin: 0;
-    margin-top: 27px;
-  }
+.information__title {
+  font-size: 36px;
+  line-height: 40px;
+  font-weight: 400;
+  margin: 0;
+  margin-top: 27px;
+}
 
-  &__list {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    list-style: none;
-    margin: 0;
-    margin-top: 38px;
-    padding: 0;
-  }
+.information__list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  list-style: none;
+  margin: 0;
+  margin-top: 38px;
+  padding: 0;
+}
 
-  &__item {
-    display: flex;
-    gap: 20px;
-  }
+.information__item {
+  display: flex;
+  gap: 20px;
+}
 
-  &__background-icon {
-    width: 60px;
-    height: 60px;
-    background-color: @basic_green;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.information__background-icon {
+  width: 60px;
+  height: 60px;
+  background-color: @basic_green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  &__text {
-    font-family: "Arial", "Helvetica", sans-serif;
-    font-size: 14px;
-    line-height: 18px;
-    color: @special_dark-grey;
-    margin: 0;
-    max-width: 200px;
-  }
+.information__text {
+  font-family: "Arial", "Helvetica", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  color: @special_dark-grey;
+  margin: 0;
+  max-width: 200px;
 }
