--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,29 +1,30 @@
 .main-nav {
+  margin: 0;
   // display: none;
+}
 
-  &__list {
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
+.main-nav__list {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
-  &__item {
-    width: 100%;
-    padding: 22px 0 24px 0;
-    border-top: 1px solid @special_grey-4;
-  }
+.main-nav__item {
+  width: 100%;
+  padding: 22px 0 24px 0;
+  border-top: 1px solid @special_grey-4;
+}
 
-  &__item a {
-    display: block;
-    text-align: center;
-    font-size: 20px;
-    line-height: 20px;
-    font-weight: 500;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: @basic_black;
-    margin: 0 auto;
-  }
+.main-nav__item a {
+  display: block;
+  text-align: center;
+  font-size: 20px;
+  line-height: 20px;
+  font-weight: 500;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: @basic_black;
+  margin: 0 auto;
 }
