--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -7,8 +7,8 @@
   padding: @mobile-padding;
   outline: 2px solid @status_error;
   outline-offset: -2px;
+}
 
-  &__logo {
-    margin: 39px 0 32px 0;
-  }
+.page-footer__logo {
+  margin: 39px 0 32px 0;
 }
