--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -5,16 +5,16 @@
   margin: 0;
   outline: 2px solid @status_error;
   outline-offset: -2px;
+}
 
-  &__row-wrapper {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 20px 17px 20px;
-  }
+.page-header__row-wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px 17px 20px;
+}
 
-  &__logo {
-    display: flex;
-    align-items: center;
-    gap: 57px;
-  }
+.page-header__logo {
+  display: flex;
+  align-items: center;
+  gap: 57px;
 }
