--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,21 +1,23 @@
 .page-main {
-  &__title {
-    font-weight: 400;
-    font-size: 36px;
-    line-height: 36px;
-    text-align: center;
-    border-top: 1px solid @special_grey-4;
-    border-bottom: 1px solid @special_grey-4;
-    margin: 0;
-    padding: 27px 0 41px 0;
+  margin: 0;
+}
 
-    &--form {
-      border-bottom: none;
-      padding-bottom: 37px;
-    }
-  }
+.page-main__title {
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 36px;
+  text-align: center;
+  border-top: 1px solid @special_grey-4;
+  border-bottom: 1px solid @special_grey-4;
+  margin: 0;
+  padding: 27px 0 41px 0;
 
-  &__form {
-    margin: 0;
+  &--form {
+    border-bottom: none;
+    padding-bottom: 37px;
   }
+}
+
+.page-main__form {
+  margin: 0;
 }
