--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -5,73 +5,73 @@
   margin: 0;
   padding: 20px 20px 25px 20px;
   border-bottom: 1px solid @special_grey-4;
+}
 
-  &__description {
-    margin: 0;
-    min-height: 112px;
-  }
+.product-card__description {
+  margin: 0;
+  min-height: 112px;
+}
 
-  &__img {
-    display: block;
-    margin: auto;
-  }
+.product-card__img {
+  display: block;
+  margin: auto;
+}
 
-  &__title {
-    width: 80px;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 20px;
-    text-transform: uppercase;
-    margin: 0;
-
-    &--last {
-      width: 100%;
-      text-align: center;
-      margin-top: 23px;
-    }
-  }
-
-  &__table {
-    width: 100%;
-    font-family: "Arial", "Helvetica", sans-serif;
-    font-size: 12px;
-    line-height: 16px;
-    color: @special_dark-grey;
-    margin: 0;
-    margin-top: 18px;
-  }
-
-  &__button {
-    grid-column-start: 1;
-    grid-column-end: 3;
-  }
-
-  &__table-value {
-    text-align: right;
-  }
+.product-card__title {
+  width: 80px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  margin: 0;
 
   &--last {
-    display: block;
-  }
-
-  &__icon {
-    display: block;
-    margin: 0 auto;
-  }
-
-  &__text {
-    font-family: "Arial", "Helvetica", sans-serif;
-    font-size: 12px;
-    line-height: 16px;
-    color: @special_dark-grey;
+    width: 100%;
     text-align: center;
-    margin: 0;
-    margin-top: 8px;
+    margin-top: 23px;
   }
+}
 
-  &__button--last {
+.product-card__table {
+  width: 100%;
+  font-family: "Arial", "Helvetica", sans-serif;
+  font-size: 12px;
+  line-height: 16px;
+  color: @special_dark-grey;
+  margin: 0;
+  margin-top: 18px;
+}
+
+.product-card__button {
+  grid-column-start: 1;
+  grid-column-end: 3;
+
+  &--last {
     background-color: @basic_grey;
     color: @special_dark-grey;
     margin-top: 21px;
   }
+}
+
+.product-card__table-value {
+  text-align: right;
+}
+
+&--last {
+  display: block;
+}
+
+.product-card__icon {
+  display: block;
+  margin: 0 auto;
+}
+
+.product-card__text {
+  font-family: "Arial", "Helvetica", sans-serif;
+  font-size: 12px;
+  line-height: 16px;
+  color: @special_dark-grey;
+  text-align: center;
+  margin: 0;
+  margin-top: 8px;
 }
