--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,15 +1,15 @@
 .social {
   width: 100%;
+}
 
-  &__list {
-    display: flex;
-    justify-content: center;
-    gap: 34px;
-    list-style: none;
-    box-sizing: border-box;
-    border-bottom: 1px solid @special_grey-6;
-    border-top: 1px solid @special_grey-6;
-    padding: 23px 0 24px 0;
-    margin: 0;
-  }
+.social__list {
+  display: flex;
+  justify-content: center;
+  gap: 34px;
+  list-style: none;
+  box-sizing: border-box;
+  border-bottom: 1px solid @special_grey-6;
+  border-top: 1px solid @special_grey-6;
+  padding: 23px 0 24px 0;
+  margin: 0;
 }
