разметка всех страниц (3 проверка)

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,4 @@
-@import "./common/normalize.css";
+@import "./common/normalize.less";
 @import "./common/fonts.less";
 @import "./common/variables.less";
 @import "./common/helpers.less";
