--- a/source/less/common/variables.less
+++ b/source/less/common/variables.less
@@ -1,4 +1,10 @@
 @mobile-padding: 0 20px;
+@tablet-padding: 0 30px;
+@desktop-padding: 0 120px;
+
+@tablet-width: 470px;
+@desktop-width: 1440px;
+@mobile-width-only: 469px;
 
 // colors
 @basic_white: #FFFFFF;
