--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -6,7 +6,7 @@
   display: grid;
   grid-template-rows: min-content 1fr min-content;
   align-content: start;
-  width: 320px;
+  min-width: 320px;
   min-height: 100%;
   font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
