--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,6 +1,5 @@
 .main-nav {
   margin: 0;
-  // display: none;
 }
 
 .main-nav__list {
@@ -31,7 +30,7 @@
   }
 }
 
-.main-nav__item a {
+.main-nav__link {
   display: block;
   text-align: center;
   font-size: 20px;
@@ -47,5 +46,7 @@
   @media (min-width: @tablet-width) {
     font-size: 18px;
     line-height: 24px;
+    font-weight: 400px;
+    padding: 0;
   }
 }
