--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -8,15 +8,16 @@
   @media (min-width: @tablet-width) {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     min-height: 78px;
     padding: @tablet-padding;
     padding-top: 24px;
   }
 
   @media (min-width: @desktop-width) {
-    display: flex;
-    justify-content: space-between;
     min-height: 109px;
+    padding: @desktop-padding;
+    padding-top: 53px;
   }
 }
 
@@ -41,8 +42,4 @@
   display: flex;
   align-items: center;
   gap: 57px;
-
-  // @media (min-width: @tablet-width) {
-
-  // }
 }
