--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,9 +1,28 @@
+.contacts {
+  position: relative;
+}
+
 .contacts__wrapper {
   display: flex;
-  gap: 5px;
   justify-content: space-between;
   padding: @mobile-padding;
   margin: 28px 0 26px 0;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 70px 0 70px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 570px;
+    min-height: 200px;
+    position: absolute;
+    top: 95px;
+    left: 110px;
+    box-sizing: border-box;
+    background-color: @basic_white;
+    padding: 62px 89px 15px 76px;
+    margin: 0;
+  }
 }
 
 .contacts__text {
@@ -11,6 +30,13 @@
   line-height: 20px;
   text-transform: uppercase;
   margin: 0;
+  max-width: 140px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 21px;
+    max-width: 165px;
+  }
 }
 
 .contacts__address {
@@ -19,8 +45,33 @@
   line-height: 20px;
   color: @special_dark-grey;
   margin: 0;
+  max-width: 140px;
+
+  @media (min-width: @tablet-width) {
+    max-width: 165px;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: end;
+  }
+
+  @media (min-width: @desktop-width) {
+    text-align: start;
+  }
+}
+
+.contacts__address span {
+  @media (min-width: @tablet-width) {
+    display: block;
+    margin-top: 19px;
+  }
 }
 
 .contacts__map {
   border: 0;
+  width: 100%;
+  height: 362px;
+
+  @media (min-width: @tablet-width) {
+    height: 400px;
+  }
 }
