--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -12,4 +12,9 @@
   border-top: 1px solid @special_grey-6;
   padding: 23px 0 24px 0;
   margin: 0;
+
+  @media (min-width: @tablet-width) {
+    border: none;
+    padding: 0;
+  }
 }
