--- a/source/less/blocks/information.less
+++ b/source/less/blocks/information.less
@@ -1,12 +1,15 @@
 .information {
   padding: @mobile-padding;
+  width: 280px;
   margin: 0 auto;
 
   @media (min-width: @tablet-width) {
+    width: 708px;
     padding: @tablet-padding;
   }
 
   @media (min-width: @desktop-width) {
+    width: 1220px;
     padding: @desktop-padding;
   }
 }
