--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -17,16 +17,15 @@
 .programs__title-wrapper {
   display: flex;
   gap: 20px;
-  padding-top: 24px;
 
   @media (min-width: @tablet-width) {
     display: block;
-    padding-top: 77px;
   }
 
   @media (min-width: @desktop-width) {
     display: flex;
-    padding-top: 92px;
+    align-items: center;
+    gap: 62px;
   }
 }
 
@@ -38,6 +37,10 @@
   margin: 0;
   padding: 0;
 
+  @media (min-width: @tablet-width) {
+    gap: 30px;
+  }
+
   @media (min-width: @desktop-width) {
     flex-direction: row;
     gap: 80px;
@@ -46,17 +49,23 @@
 
 .programs__item {
   padding: @mobile-padding;
+  padding-top: 24px;
   min-height: 266px;
+  box-sizing: border-box;
   background-color: @basic_grey;
   width: 280px;
   margin: 0 auto;
 
   @media (min-width: @tablet-width) {
+    box-sizing: border-box;
     width: 708px;
+    padding: 77px 62px 53px 52px;
+    position: relative;
   }
 
   @media (min-width: @desktop-width) {
     width: 570px;
+    padding: 47px 51px 55px 52px;
   }
 }
 
@@ -70,11 +79,15 @@
   background-color: @basic_green;
 
   @media (min-width: @tablet-width) {
+    position: absolute;
+    right: 62px;
+    top: 92px;
     width: 200px;
     height: 200px;
   }
 
   @media (min-width: @desktop-width) {
+    position: static;
     width: 100px;
     height: 100px;
   }
@@ -138,8 +151,16 @@
   border-bottom: 1px solid @special_grey-6;
 
   @media (min-width: @tablet-width) {
+    width: 340px;
     font-size: 16px;
     line-height: 24px;
+    padding: 0;
+    border: none;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: auto;
+    margin-top: 39px;
   }
 }
 
@@ -157,5 +178,11 @@
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 30px;
+    padding: 0;
+    margin-top: 52px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 27px;
   }
 }
